use sold out data

--- a/src/components/Album.css
+++ b/src/components/Album.css
@@ -19,6 +19,10 @@
     background-color: grey;
 }
 
+.album-button:disabled {
+    background-color: grey;
+}
+
 .album-art {
     height: 200px;
 }
