--- a/css-version/src/App.css
+++ b/css-version/src/App.css
@@ -26,6 +26,7 @@
 .album-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 @media only screen and (min-width: 768px) {
